Serve cached thumbnails for image history
